update meta tags

--- a/community.html
+++ b/community.html
@@ -9,19 +9,22 @@
     />
     <meta
       name="description"
-      content="Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration."
+      content="OpenMetadata is the #1 open source data catalog tool with the all-in-one platform for data discovery, quality, governance, collaboration & more. Join our community to stay updated."
     />
     <meta
       name="keywords"
-      content="metadata, data discovery, data collaboration, metadata lineage, data governance, data catalog, open source"
+      content="best open-source data catalog community, #1 open source data catalog, enterprise data catalog, data governance solutions, centralized metadata platform, best data discovery tool, data collaboration platform, modern data catalog, data catalog data lineage, best metadata management tool"
     />
     <meta name="author" content="open-metadata" />
 
     <!-- Open Graph tags start -->
-    <meta property="og:title" content="OpenMetadata Community" />
+    <meta
+      property="og:title"
+      content="OpenMetadata: Join the #1 Open Source Data Community"
+    />
     <meta
       property="og:description"
-      content="Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration."
+      content="OpenMetadata is the #1 open source data catalog tool with the all-in-one platform for data discovery, quality, governance, collaboration & more. Join our community to stay updated."
     />
     <meta
       property="og:image"
@@ -34,10 +37,13 @@
     <!-- Twitter Card start -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://open-metadata.org" />
-    <meta name="twitter:title" content="OpenMetadata Community" />
+    <meta
+      name="twitter:title"
+      content="OpenMetadata: Join the #1 Open Source Data Community"
+    />
     <meta
       name="twitter:description"
-      content="Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration."
+      content="OpenMetadata is the #1 open source data catalog tool with the all-in-one platform for data discovery, quality, governance, collaboration & more. Join our community to stay updated."
     />
     <meta
       name="twitter:image"
@@ -46,7 +52,7 @@
 
     <!-- Twitter Card end -->
 
-    <title>OpenMetadata Community</title>
+    <title>OpenMetadata: Join the #1 Open Source Data Community</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
