--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     />
     <meta
       name="description"
-      content="An end-to-end metadata management solution that includes data catalog, data discovery, governance, data quality, observability, and people collaboration."
+      content="OpenMetadata is the #1 open source data catalog tool. Empower innovation and foster collaboration with the all-in-one platform for data discovery, lineage, data quality, observability, governance, and more."
     />
     <meta
       name="keywords"
-      content="metadata, data discovery, data collaboration, metadata lineage, data governance, data catalog, open source"
+      content="best open-source data catalog, #1 open source data catalog, enterprise data catalog, data governance solutions, centralized metadata platform, best data discovery tool, data collaboration platform, modern data catalog, data catalog data lineage, best metadata management tool"
     />
     <meta name="author" content="open-metadata" />
 
     <!-- Open Graph tags start -->
     <meta
       property="og:title"
-      content="OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage."
+      content="OpenMetadata: The Best Open Source Data Catalog Solution"
     />
     <meta
       property="og:description"
-      content="An end-to-end metadata management solution that includes data catalog, data discovery, governance, data quality, observability, and people collaboration."
+      content="OpenMetadata is the #1 open source data catalog tool. Empower innovation and foster collaboration with the all-in-one platform for data discovery, lineage, data quality, observability, governance, and more."
     />
     <meta
       property="og:image"
@@ -40,7 +40,7 @@
     <meta name="twitter:site" content="https://open-metadata.org" />
     <meta
       name="twitter:title"
-      content="OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage."
+      content="OpenMetadata: The Best Open Source Data Catalog Solution"
     />
     <meta
       name="twitter:description"
@@ -53,9 +53,7 @@
 
     <!-- Twitter Card end -->
 
-    <title>
-      OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage.
-    </title>
+    <title>OpenMetadata: The Best Open Source Data Catalog Solution</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
