chore: load script async

--- a/index.html
+++ b/index.html
@@ -61,12 +61,8 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <script
-      data-search-pseudo-elements=""
-      defer=""
-      src="js/all.min.js"
-    ></script>
-    <script src="js/feather.min.js"></script>
+    <script data-search-pseudo-elements="" defer src="js/all.min.js"></script>
+    <script defer src="js/feather.min.js"></script>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-LBLK284YQW"
@@ -1927,9 +1923,9 @@
     <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="js/testimonials.js"></script>
+    <script async src="js/testimonials.js"></script>
     <script src="js/aos.js"></script>
-    <script src="js/clipboard.js"></script>
+    <script async src="js/clipboard.js"></script>
     <script>
       AOS.init({
         disable: 'mobile',
