chore: update 1.0.0 to 1.0

--- a/index.html
+++ b/index.html
@@ -260,17 +260,17 @@
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
                   <div class="display-6 text-primary fw-500">
-                    1.0.0 Released - Try Now!
+                    1.0 Released - Try Now!
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    <strong>OpenMetadata 1.0.0 Released</strong> with stabilized
+                    <strong>OpenMetadata 1.0 Released</strong> with stabilized
                     schemas and APIs, and an improved UI/UX. Explore the awesome
                     new features for data ingestion, dashboard data models, auto
                     PII classification, localization support, global search,
                     lineage, and much more.
-                    <strong>OpenMetadata 1.0.0 Release</strong>
+                    <strong>OpenMetadata 1.0 Release</strong>
                     <a
                       href="https://blog.open-metadata.org/openmetadata-1-0-release-beb34762d916"
                       target="_blank"
@@ -1656,13 +1656,11 @@
                     <img
                       class="card-img-top"
                       src="./images/v1.0.0.jpg"
-                      alt="release-1.0.0"
+                      alt="release-1.0"
                       loading="lazy"
                     />
                     <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 1.0.0 Release
-                      </h4>
+                      <h4 class="card-title mb-2">OpenMetadata 1.0 Release</h4>
                       <p class="card-text">
                         Improved Schemas & APIs, Ingestion Improvements, Storage
                         Services, Dashboard Data Models, Auto PII
