--- a/index.html
+++ b/index.html
@@ -260,19 +260,17 @@
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
                   <div class="display-6 text-primary fw-500">
-                    1.0 Released - Try Now!
+                    1.1 Released - Try Now!
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    <strong>OpenMetadata 1.0 Released</strong> with stabilized
-                    schemas and APIs, and an improved UI/UX. Explore the awesome
-                    new features for data ingestion, dashboard data models, auto
-                    PII classification, localization support, global search,
-                    lineage, and much more.
-                    <strong>OpenMetadata 1.0 Release</strong>
+                    <strong>OpenMetadata 1.1 Released</strong> UI Overhaul, New
+                    Connectors, Improved Lineage Parsing, PII Masking, and lots
+                    more.
+                    <strong>OpenMetadata 1.1 Release</strong>
                     <a
-                      href="https://blog.open-metadata.org/openmetadata-1-0-release-beb34762d916"
+                      href="https://blog.open-metadata.org/openmetadata-1-1-0-release-97c1fb603bcf"
                       target="_blank"
                       >Read more here</a
                     >.
@@ -1650,6 +1648,49 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-1-1-0-release-97c1fb603bcf"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/v1.1.png"
+                      alt="release-1.1"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">OpenMetadata 1.1 Release</h4>
+                      <p class="card-text">
+                        UI Overhaul, New Connectors, Improved Lineage Parsing,
+                        PII Masking, and lots more.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-1-0-release-beb34762d916"
                     target="_blank"
                   >
@@ -1710,52 +1751,6 @@
                       <p class="card-text">
                         Extracting Metadata from Every Corner: The evolution of
                         the Ingestion Framework at OpenMetadata
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-13-2-release-e32c0de93361"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/release-0.13.2.webp"
-                      alt="release-0.13.2"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.13.2 Release
-                      </h4>
-                      <p class="card-text">
-                        Improved SQL Lineage, Glossary Bulk Upload, Unified Tag
-                        Category API, Mutually Exclusive Tags, Chrome Extension,
-                        and lots more.
                       </p>
                     </div>
                     <div
