chore: update 1.1 blog cover image

--- a/index.html
+++ b/index.html
@@ -1653,7 +1653,7 @@
                   >
                     <img
                       class="card-img-top"
-                      src="./images/v1.1.png"
+                      src="./images/v1.1.jpg"
                       alt="release-1.1"
                       loading="lazy"
                     />
