chore: add testimonial image section

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             </div>
           </section>
 
-          <section class="bg-white py-10">
+          <section class="bg-white py-10 pb-5">
             <div class="container position-relative px-5">
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
@@ -353,6 +353,24 @@
               </div>
               <div class="swiper-button-next"></div>
               <div class="swiper-button-prev"></div>
+            </div>
+          </section>
+
+          <section class="bg-white pb-5">
+            <div class="container position-relative px-5">
+              <div class="row gx-5 justify-content-center">
+                <div class="col-lg-12">
+                  <div class="text-center mb-5">
+                    <h2 class="display-5 mb-3 text-dark">
+                      Empowering Smart Data Teams
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="row gx-5 justify-content-center"
+                id="testimonialImagesContainer"
+              ></div>
             </div>
           </section>
 
