chore: change 1.1 to 1.1.0

--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
                   <div class="display-6 text-primary fw-500">
-                    1.1 Released - Try Now!
+                    1.1.0 Released - Try Now!
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    <strong>OpenMetadata 1.1 Released</strong> UI Overhaul, New
-                    Connectors, Improved Lineage Parsing, PII Masking, and lots
-                    more.
-                    <strong>OpenMetadata 1.1 Release</strong>
+                    <strong>OpenMetadata 1.1.0 Released</strong> UI Overhaul,
+                    New Connectors, Improved Lineage Parsing, PII Masking, and
+                    lots more.
+                    <strong>OpenMetadata 1.1.0 Release</strong>
                     <a
                       href="https://blog.open-metadata.org/openmetadata-1-1-0-release-97c1fb603bcf"
                       target="_blank"
@@ -1672,11 +1672,13 @@
                     <img
                       class="card-img-top"
                       src="./images/v1.1.jpg"
-                      alt="release-1.1"
+                      alt="release-1.1.0"
                       loading="lazy"
                     />
                     <div class="card-body">
-                      <h4 class="card-title mb-2">OpenMetadata 1.1 Release</h4>
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 1.1.0 Release
+                      </h4>
                       <p class="card-text">
                         UI Overhaul, New Connectors, Improved Lineage Parsing,
                         PII Masking, and lots more.
