chore: update the new blog, community meeting and webinars

--- a/community.html
+++ b/community.html
@@ -287,17 +287,19 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/LII_5CDo_0s"
+                        src="https://www.youtube.com/embed/ihwtuNHt1kI"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        OpenMetadata Webinar on Glossaries and Classifications:
-                        Learn how these features work, how to organize them, and
-                        the best practices on using them to label the data to
-                        support various use cases.
+                        Here's a Webinar on Data Quality Simplified:
+                        Effortlessly Build, Deploy, Monitor, & Configure Alerts
+                        with our No-Code Platform. Watch Teddy Crépineau,
+                        Founding Software Engineer at Collate demo the
+                        easy-to-use and extensible data quality features to get
+                        to reliable data faster.
                       </p>
                     </div>
                   </div>
@@ -308,16 +310,18 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/pzX89GP_nRw"
+                        src="https://www.youtube.com/embed/lOQepnTdA58"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        OpenMetadata Webinar on Storage Services: Learn how the
-                        Datalake connector works, our goal with the new Storage
-                        Services, as well as its design and implementation.
+                        Learn to proactively hone the data culture of your
+                        company. With a built-in goal-setting and tracking
+                        mechanism in Data Insights, you can now set targets,
+                        monitor, and boost teams to accomplish data goals to
+                        foster a healthy data culture using OpenMetadata.
                       </p>
                     </div>
                   </div>
@@ -377,13 +381,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/WVURVh6HHkM"
+                            src="https://www.youtube.com/embed/35Y6VwIbK8A"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">May 18th, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">Sep 8th, 2023</p>
                         </div>
                       </div>
                     </div>
@@ -393,13 +397,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/Qif-8SQ1KSE"
+                            src="https://www.youtube.com/embed/mG2A-KpT70U"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">March 16th, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">June 23rd, 2023</p>
                         </div>
                       </div>
                     </div>
