--- a/index.html
+++ b/index.html
@@ -1666,6 +1666,54 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/simple-easy-and-efficient-data-quality-with-openmetadata-1c4e7d329364"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/data-quality-blog.png"
+                      alt="data-quality-blog"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        Simple, Easy, and Efficient Data Quality with
+                        OpenMetadata
+                      </h4>
+                      <p class="card-text">
+                        In this blog, we’ll explore how OpenMetadata natively
+                        supports data quality that is key to many advantages —
+                        lowered cost, improved productivity, better
+                        collaboration, and many more.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-1-1-0-release-97c1fb603bcf"
                     target="_blank"
                   >
@@ -1726,51 +1774,6 @@
                         Improved Schemas & APIs, Ingestion Improvements, Storage
                         Services, Dashboard Data Models, Auto PII
                         Classification, Localization and much more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/how-we-built-the-ingestion-framework-1af0b6ff5c81"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/how-we-built-ingestion.png"
-                      alt="how-we-built-ingestion-framework"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        How we Built the Ingestion Framework
-                      </h4>
-                      <p class="card-text">
-                        Extracting Metadata from Every Corner: The evolution of
-                        the Ingestion Framework at OpenMetadata
                       </p>
                     </div>
                     <div
