add release 1.2 blog

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     Customizable Landing Pages and lots more.
                     <strong>OpenMetadata 1.2.0 Release</strong>
                     <a
-                      href="https://github.com/open-metadata/OpenMetadata/releases/tag/1.2.0-release"
+                      href="https://blog.open-metadata.org/openmetadata-release-1-2-531f0e3c6d9a"
                       target="_blank"
                       >Read more here</a
                     >.
@@ -399,8 +399,11 @@
                       <i class="me-2" data-feather="copy"></i> Copy
                     </button>
                     <span id="om-start-command"
-                      >mkdir openmetadata-docker && cd openmetadata-docker <br>
-                      wget -O https://github.com/open-metadata/OpenMetadata/releases/download/1.2.0-release/docker-compose.yml <br>
+                      >mkdir openmetadata-docker && cd openmetadata-docker
+                      <br />
+                      wget -O
+                      https://github.com/open-metadata/OpenMetadata/releases/download/1.2.0-release/docker-compose.yml
+                      <br />
                       docker compose -f docker-compose.yml up --detach</span
                     >
                   </div>
@@ -1667,6 +1670,51 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-release-1-2-531f0e3c6d9a"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/release-1.2.webp"
+                      alt="data-quality-blog"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">OpenMetadata Release 1.2</h4>
+                      <p class="card-text">
+                        Domains, Data Products, Search Index, Stored Procedures,
+                        Glossary Approval Workflow, Customizable Landing Page,
+                        Applications, Knowledge Center, Cost Analysis, and lots
+                        more.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/simple-easy-and-efficient-data-quality-with-openmetadata-1c4e7d329364"
                     target="_blank"
                   >
@@ -1731,50 +1779,6 @@
                       <p class="card-text">
                         UI Overhaul, New Connectors, Improved Lineage Parsing,
                         PII Masking, and lots more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-1-0-release-beb34762d916"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/v1.0.0.jpg"
-                      alt="release-1.0"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">OpenMetadata 1.0 Release</h4>
-                      <p class="card-text">
-                        Improved Schemas & APIs, Ingestion Improvements, Storage
-                        Services, Dashboard Data Models, Auto PII
-                        Classification, Localization and much more.
                       </p>
                     </div>
                     <div
