update content for release 1.3.0

--- a/community.html
+++ b/community.html
@@ -381,13 +381,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/35Y6VwIbK8A"
+                            src="https://www.youtube.com/embed/7jgtfdpOKwo"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">Sep 8th, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">Feb 1st, 2024</p>
                         </div>
                       </div>
                     </div>
@@ -397,13 +397,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/mG2A-KpT70U"
+                            src="https://www.youtube.com/embed/W4R8BUiHyK4"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">June 23rd, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">Dec 18th, 2023</p>
                         </div>
                       </div>
                     </div>
